fluxcd/02-applications/flux-web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flux-system
  labels:
    gateway.networking.k8s.io/allowed: "true"
