fluxcd/02-applications/flux-web/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-web
  namespace: flux-system
  labels:
    app.kubernetes.io/name: flux-web
    app.kubernetes.io/component: web-ui
spec:
  hostnames:
    - fluxcd.civilsnut.se
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: flux-web
          port: 9080
      matches:
        - path:
            type: PathPrefix
            value: /
